<resources>
    <string name="app_name">social-network</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="hello_world">Hello World</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="loading">Loading</string>
    <string name="you_are_friends">You are friends</string>
    <string name="cancel_request">Cancel request</string>
    <string name="accept_request">Accept request</string>
    <string name="post">Post</string>
    <string-array name="privacy_level">
        <item>Fiends</item>
        <item>Only me</item>
        <item>Public</item>
    </string-array>
    <string name="less_than_100">Should be less than 100 characters</string>
    <string name="what_on_your_mind">What\'s on your mind?</string>
    <string name="write_your_status">Please write your status</string>
    <string name="uploading_post">Uploading post</string>
    <string name="choose_options">Choose options</string>
    <string name="option_change_cover">Change cover image</string>
    <string name="option_profile_image">Change profile image</string>
    <string name="image_picker_failed">"Image picker failed"</string>
    <string name="option_view_cover">View cover image</string>
    <string name="option_view_avatar">View profile image</string>
    <string name="search_someone">Let\'s search someone</string>
    <string name="search_people">Search people</string>
    <string name="add_friend">Add friend</string>
    <string name="error">Error</string>
    <string name="please_wait">Please wait</string>
    <string name="unfriend">Unfriend</string>
    <string name="friend_requests">Friend requests</string>
    <string name="add_some_friends">Let\'s add some friends</string>
    <string name="person_name">Person name</string>
    <string name="accept">Accept</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="_0_comment">0 comment</string>
    <string name="_0_reaction">0 Reaction</string>
</resources>