<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.auth.LoginActivity">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="480dp"
        app:layout_constraintTop_toBottomOf="@id/rlHeader"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/shape_left_panel"/>

    <LinearLayout
        android:id="@+id/llLoginPanel"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_login_panel"
        android:orientation="vertical"
        android:paddingHorizontal="50dp"
        android:paddingTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlHeader">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password" />
    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@id/llLoginPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_login_button"
        android:textColor="@android:color/white"
        android:text="@string/login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/llLoginPanel"
        android:textColor="@android:color/white"
        android:layout_marginHorizontal="40dp"
        android:text="@string/login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/llLoginPanel"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="40dp"
        android:text="@string/sign_up"
        android:gravity="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:textColor="@color/purple_500"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>